# intron

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  exon.toml  install.ps1  install.sh  mise.toml
.github/cmake/: CMakeLists.txt
.github/workflows/: ci.yml  release.yml
src/: config.cppm  installer.cppm  intron.app.cppm  intron.domain.cppm  intron.edge.cppm  intron.output.cppm  main.cpp  net.cppm  registry.cppm
tests/: test_app.cpp  test_config.cpp  test_env_output_modes.cpp  test_env_windows_sdk.cpp  test_installer.cpp  test_output.cpp  test_registry.cpp
